Final changes to html & PHP. Added home page as index.html

--- a/customer_add.html
+++ b/customer_add.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<link rel="icon" href="favicon.ico">
 
-		<!-- Website Title & Description for Search Engine purposes -->
-		<title></title>
-		<meta name="description" content="">
+	<title>Add A Customer Form</title>
 
-		<!-- Mobile viewport optimized -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<!-- Bootstrap core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- Bootstrap CSS -->
-		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<link href="includes/css/bootstrap-glyphicons.css" rel="stylesheet">
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-		<!-- Custom CSS -->
-		<link href="includes/css/styles.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="styles.css" rel="stylesheet">
 
-		<!-- Include Modernizr in the head, before any other Javascript -->
-		<script src="includes/js/modernizr-2.6.2.min.js"></script>
-
-	</head>
+</head>
 	<body>
 		<div class="container" id="main">
 			<nav class="navbar navbar-default navbar-fixed-top">
@@ -36,7 +37,7 @@
 			        </div>
 			        <div id="navbar" class="navbar-collapse collapse">
 			          <ul class="nav navbar-nav">
-			            <li><a href="customer_view.php">Home</a></li>
+			            <li><a href="index.html">Home</a></li>
 			            <li><a href="customer_view.php">View</a></li>
 			            <li class="active"><a href="customer_add.html">Add</a></li>
 			          </ul>
