--- a/index.html
+++ b/index.html
@@ -26,35 +26,37 @@
 
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Assignment 2</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">View</a></li>
-            <li class="active"><a href="#add">Add</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class='dropdown'>
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Account
-                  <span class="caret"></span></a>
-                       <ul class="dropdown-menu">
-                          <li><a href="#">Login</a></li>
-                          <li><a href="#">Settings</a></li>
-                      </ul>
-                </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Assignment 2</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="customer_view.php">View</a></li>
+                <li><a href="customer_add.html">Add</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li class='dropdown'>
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Account
+                      <span class="caret"></span></a>
+                           <ul class="dropdown-menu">
+                              <li><a href="#">Login</a></li>
+                              <li><a href="#">Settings</a></li>
+                          </ul>
+                    </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+        <br/><br/><br/><br/> <h1><center> This is the Home Page. Welcome! </center></h1>
 
 
 
